<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>SeleniumAdvanceFramework</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>SeleniumAdvanceFramework</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
      <!-- Source: https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
      <dependency>
          <groupId>org.seleniumhq.selenium</groupId>
          <artifactId>selenium-java</artifactId>
          <version>4.43.0</version>
          <scope>compile</scope>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/org.testng/testng -->
      <dependency>
          <groupId>org.testng</groupId>
          <artifactId>testng</artifactId>
          <version>7.12.0</version>
          <scope>test</scope>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
      <dependency>
          <groupId>io.qameta.allure</groupId>
          <artifactId>allure-testng</artifactId>
          <version>2.34.0</version>
          <scope>compile</scope>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/org.uncommons/reportng -->
      <dependency>
          <groupId>org.uncommons</groupId>
          <artifactId>reportng</artifactId>
          <version>1.1.4</version>
          <scope>test</scope>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/org.assertj/assertj-core -->
      <dependency>
          <groupId>org.assertj</groupId>
          <artifactId>assertj-core</artifactId>
          <version>4.0.0-M1</version>
          <scope>test</scope>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
          <version>2.26.0</version>
          <scope>compile</scope>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-api</artifactId>
          <version>2.26.0</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-slf4j2-impl</artifactId>
          <version>2.26.0</version>
      </dependency>


      <!-- Source: https://mvnrepository.com/artifact/org.apache.poi/poi -->
      <dependency>
          <groupId>org.apache.poi</groupId>
          <artifactId>poi</artifactId>
          <version>5.5.1</version>
          <scope>compile</scope>
      </dependency>
      <!-- Source: https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
      <dependency>
          <groupId>org.apache.poi</groupId>
          <artifactId>poi-ooxml</artifactId>
          <version>5.5.1</version>
          <scope>compile</scope>
      </dependency>

      <!-- Source: https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml-schemas -->
      <dependency>
          <groupId>org.apache.poi</groupId>
          <artifactId>poi-ooxml-schemas</artifactId>
          <version>4.1.2</version>
          <scope>compile</scope>
      </dependency>
      <dependency>
          <groupId>io.github.cdimascio</groupId>
          <artifactId>dotenv-java</artifactId>
          <version>3.0.0</version>
      </dependency>
      <dependency>
          <groupId>org.yaml</groupId>
          <artifactId>snakeyaml</artifactId>
          <version>2.2</version>
      </dependency>
  </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
